Fix layout shift due to scrollbars

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -68,6 +68,7 @@ html {
     line-height: 1.6;
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
+    overflow-y: scroll;
 }
 
 body {
